--- a/index.html
+++ b/index.html
@@ -5,14 +5,16 @@ g<!DOCTYPE html>
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
-  <script src="script.js" defer></script>
-  <link rel="stylesheet" href="style.css">
+  <script src="script2.js" defer></script>
+  <link rel="stylesheet" href="style2.css">
 </head>
 <body>
   <header>
     <a href="" class="title"><h1><span>shop</span></h1></a>
+    <a href="" class="explore"><p><span>explore</span></p></a>
+    <p class="arrow">&#751;</p>
   
-<nav class="show"></nav  ></header>
+<nav class="show"></nav></header>
 
 
   <main></main>
