--- a/index2.html
+++ b/index2.html
@@ -5,14 +5,13 @@ g<!DOCTYPE html>
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
-  <script src="script.js" defer></script>
-  <link rel="stylesheet" href="style.css">
+  <script src="script2.js" defer></script>
+  <link rel="stylesheet" href="style2.css">
 </head>
 <body>
   <header>
     <a href="" class="title"><h1><span>My shop</span></h1></a>
-    
-    
+    <a href="" id="explore"><span>explore</span></a>
     <!-- <p class="arrow">&#751;</p> -->
   
 </header><nav class="show"></nav>
