--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-g<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
@@ -10,12 +10,15 @@ g<!DOCTYPE html>
 </head>
 <body>
   <header>
-    <a href="" class="title"><h1><span>My shop</span></h1></a>
+    <div><h1>Myshop</h1></div>
+    <a href="" class="title"><h2><span>Explore</span></h2></a>
+    <span class="arrow"> &#812;</span>
+
     
     
     <!-- <p class="arrow">&#751;</p> -->
-  
-</header><nav class="show"></nav>
+  <nav class="show"></nav>
+</header>
 
 
   <main></main>
