--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 <body>
   <header>
     <div><h1>Myshop</h1></div>
-    <a href="" class="title"><h2><span>Explore</span></h2></a>
-    <span class="arrow"> &#812;</span>
+   <h2 class="explore"><span>Explore</span></h2>
+     <span class="arrow"> &#812;</span>
 
     
     
