--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
 </head>
 <body>
   <header>
-    <div class="headersection"><h1>Myshop</h1><h2 class="cart"><i class="fa-solid fa-cart-shopping"></i></h2> </div>
+   <nav class="search"> <input type="search"><button type="submit">cerca</button></nav>
+    <!--div del titolo con iconitolo:explore++++++++++++++++++++icona carrello+++++++++++++++++++++++++++-->
+    <div class="title-section"><h1>Myshop</h1><h2 class="cart"><i class="fa-solid fa-cart-shopping"></i></h2> </div>
     <p class="text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Modi debitis non, saepe velit ex optio at soluta est ullam ad consectetur enim animi mollitia fuga aut tenetur autem. Sint, fugit.</p>
    <h2 class="explore"><span>Explore</span></h2>
      <span class="arrow"> &#812;</span>
